# src/AppForSEII2526.Web/OpenAPIs/swagger.json
@@ -50,26 +50,6 @@
                 }
               }
             }
-          },
-          "404": {
-            "description": "Not Found",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              }
-            }
           }
         }
       }
@@ -84,17 +64,17 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/MaintenanceCreateDTO"
+                "$ref": "#/components/schemas/MaintenanceForCreateDTO"
               }
             },
             "text/json": {
               "schema": {
-                "$ref": "#/components/schemas/MaintenanceCreateDTO"
+                "$ref": "#/components/schemas/MaintenanceForCreateDTO"
               }
             },
             "application/*+json": {
               "schema": {
-                "$ref": "#/components/schemas/MaintenanceCreateDTO"
+                "$ref": "#/components/schemas/MaintenanceForCreateDTO"
               }
             }
           }
@@ -136,26 +116,6 @@
               "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ValidationProblemDetails"
-                }
-              }
-            }
-          },
-          "409": {
-            "description": "Conflict",
-            "content": {
-              "text/plain": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "application/json": {
-                "schema": {
-                  "type": "string"
-                }
-              },
-              "text/json": {
-                "schema": {
-                  "type": "string"
                 }
               }
             }
@@ -398,7 +358,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/MaintenanceSelectDTO"
+                    "$ref": "#/components/schemas/MantenimientoDTO"
                   }
                 }
               },
@@ -406,7 +366,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/MaintenanceSelectDTO"
+                    "$ref": "#/components/schemas/MantenimientoDTO"
                   }
                 }
               },
@@ -414,7 +374,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/MaintenanceSelectDTO"
+                    "$ref": "#/components/schemas/MantenimientoDTO"
                   }
                 }
               }
@@ -1018,10 +978,6 @@
           },
           "client": {
             "$ref": "#/components/schemas/ApplicationUser"
-          },
-          "clientId": {
-            "type": "string",
-            "nullable": true
           }
         },
         "additionalProperties": false
@@ -1198,123 +1154,92 @@
         },
         "additionalProperties": false
       },
-      "MaintenanceCreateDTO": {
-        "type": "object",
-        "properties": {
-          "clientId": {
-            "type": "string",
-            "nullable": true
-          },
-          "paymentMethod": {
-            "type": "string",
-            "nullable": true
-          },
-          "date": {
-            "type": "string",
-            "format": "date-time"
-          },
-          "maintenanceItems": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/MaintenanceItemDTO"
-            },
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
       "MaintenanceDetailDTO": {
+        "required": [
+          "applicationUser",
+          "clientAddress",
+          "date",
+          "paymentMethod"
+        ],
         "type": "object",
         "properties": {
-          "maintenanceItems": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/MaintenanceItemDTO"
-            },
-            "nullable": true
+          "applicationUser": {
+            "minLength": 1,
+            "type": "string"
           },
-          "id": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "clientId": {
-            "type": "string",
-            "nullable": true
+          "clientAddress": {
+            "type": "string"
           },
           "paymentMethod": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "date": {
             "type": "string",
             "format": "date-time"
           },
-          "totalPrice": {
-            "type": "number",
-            "format": "double"
+          "phoneNumber": {
+            "type": "string",
+            "nullable": true
           },
-          "maintenances": {
+          "reservaItems": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/MaintenanceItemDTO"
+              "$ref": "#/components/schemas/ReservaItemDTO"
             },
             "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "MaintenanceItemDTO": {
-        "type": "object",
-        "properties": {
-          "maintenanceId": {
-            "type": "integer",
-            "format": "int32"
           },
-          "maintenanceName": {
-            "type": "string",
-            "nullable": true
-          },
-          "type": {
-            "type": "string",
-            "nullable": true
-          },
-          "price": {
+          "TotalPrice": {
             "type": "number",
-            "format": "double"
+            "format": "double",
+            "readOnly": true
           },
-          "numberOfDays": {
-            "type": "integer",
-            "format": "int32"
-          },
-          "comment": {
-            "type": "string",
-            "nullable": true
-          }
-        },
-        "additionalProperties": false
-      },
-      "MaintenanceSelectDTO": {
-        "type": "object",
-        "properties": {
           "id": {
             "type": "integer",
             "format": "int32"
+          }
+        },
+        "additionalProperties": false
+      },
+      "MaintenanceForCreateDTO": {
+        "required": [
+          "applicationUser",
+          "clientAddress",
+          "date",
+          "paymentMethod"
+        ],
+        "type": "object",
+        "properties": {
+          "applicationUser": {
+            "minLength": 1,
+            "type": "string"
           },
-          "name": {
+          "clientAddress": {
+            "type": "string"
+          },
+          "paymentMethod": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "date": {
+            "type": "string",
+            "format": "date-time"
+          },
+          "phoneNumber": {
             "type": "string",
             "nullable": true
           },
-          "type": {
-            "type": "string",
+          "reservaItems": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/ReservaItemDTO"
+            },
             "nullable": true
           },
-          "price": {
+          "TotalPrice": {
             "type": "number",
-            "format": "double"
-          },
-          "numberOfDays": {
-            "type": "integer",
-            "format": "int32"
+            "format": "double",
+            "readOnly": true
           }
         },
         "additionalProperties": false
@@ -1336,6 +1261,40 @@
           },
           "maintenance": {
             "$ref": "#/components/schemas/Maintenance"
+          }
+        },
+        "additionalProperties": false
+      },
+      "MantenimientoDTO": {
+        "required": [
+          "nombre",
+          "numeroDias",
+          "precio",
+          "tipo"
+        ],
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "nombre": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "tipo": {
+            "minLength": 1,
+            "type": "string"
+          },
+          "precio": {
+            "maximum": 500,
+            "minimum": 1,
+            "type": "number",
+            "format": "currency"
+          },
+          "numeroDias": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -1659,6 +1618,13 @@
         "additionalProperties": false
       },
       "RentalCreateDTO": {
+        "required": [
+          "address",
+          "clientId",
+          "name",
+          "paymentMethod",
+          "surname"
+        ],
         "type": "object",
         "properties": {
           "startDate": {
@@ -1670,28 +1636,28 @@
             "format": "date-time"
           },
           "paymentMethod": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "totalPrice": {
             "type": "number",
             "format": "double"
           },
           "clientId": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "name": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "surname": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "address": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "deliveryCarDealer": {
             "type": "string",
@@ -1712,6 +1678,13 @@
         "additionalProperties": false
       },
       "RentalDetailDTO": {
+        "required": [
+          "address",
+          "clientId",
+          "name",
+          "paymentMethod",
+          "surname"
+        ],
         "type": "object",
         "properties": {
           "startDate": {
@@ -1723,28 +1696,28 @@
             "format": "date-time"
           },
           "paymentMethod": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "totalPrice": {
             "type": "number",
             "format": "double"
           },
           "clientId": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "name": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "surname": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "address": {
-            "type": "string",
-            "nullable": true
+            "minLength": 1,
+            "type": "string"
           },
           "deliveryCarDealer": {
             "type": "string",
@@ -1848,6 +1821,32 @@
             "format": "double"
           },
           "color": {
+            "type": "string",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
+      "ReservaItemDTO": {
+        "type": "object",
+        "properties": {
+          "reservaId": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "price": {
+            "type": "number",
+            "format": "double"
+          },
+          "numberOfDays": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "comentarios": {
+            "type": "string",
+            "nullable": true
+          },
+          "name": {
             "type": "string",
             "nullable": true
           }
